@@ -1,3 +1,8 @@
+2006-12-07  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
+
+	Tweak flags and define WIN32 for VC++.
+	* urbi-prog-cxx.m4: Here.
+
 2006-12-05  Akim Demaille  <demaille@gostai.com>
 
 	More restyling
